--- a/frontend/src/Style/RootStyle/RootLogin&Register/RootLogin&Register.css
+++ b/frontend/src/Style/RootStyle/RootLogin&Register/RootLogin&Register.css
@@ -10,6 +10,10 @@
 
     --light-color-for-input: black;
 
+    --light-color-for-select: black;
+    
+    --light-color-for-option: lightgray;
+
     --light-color-for-border-bottom: lightgray;
   
     /*dark*/
@@ -20,6 +24,10 @@
     --dark-background-color-for-input: rgb(13, 13, 13);
 
     --dark-color-for-input: white;
+
+    --dark-color-for-select: white;
+    
+    --dark-color-for-option: darkgray;
 
     --dark-color-for-border-bottom: darkgray;
   
